# Email-Marketing-Dashboard

./: .gitignore  README.md  auth.py  clear_db.py  config.py  database.py  database_details.txt  main.py  manual_testing_guide.txt  mock_data_generator.py  pyproject.toml  render.yaml  requirements.txt  schemas.py  seed_data.py  vercel.json
